--- a/ports/index.html
+++ b/ports/index.html
@@ -1,9 +1,11 @@
   <table width="100%" cellspacing="0">
    <tr class="header"><td><b>Port</b></td><td><b>Version</b></td><td><b>Description</b></td><td><b>Last modified</b></td></tr>
    <tr class="odd"><td><a href="https://github.com/karlstav/cava">cava</a></td><td><a href="./cava/">git-2</a></td><td>Console-based Audio Visualizer for Alsa. (git checkout)</td><td>2016-03-24</td></tr>
-   <tr class="even"><td><a href="http://git.2f30.org/colors/log.html">colors</a></td><td><a href="./colors/">git-1</a></td><td>Extract colors from pictures. (git checkout)</td><td>2016-03-24</td></tr>
-   <tr class="odd"><td><a href="https://01.org/connman">connman</a></td><td><a href="./connman/">git-1</a></td><td>Wireless LAN network daemon. (git checkout)</td><td>2016-03-24</td></tr>
-   <tr class="even"><td><a href="https://github.com/eurogiciel-oss/connman-json-client/wiki">connman-ncurses</a></td><td><a href="./connman-ncurses/">git-1</a></td><td>Ncurses interface to connman. (git checkout)</td><td>2016-03-24</td></tr>
+   <tr class="even"><td><a href="http://cdrtools.sourceforge.net/private/cdrecord.html">cdrtools</a></td><td><a href="./cdrtools/">3.02a06-1</a></td><td>Highly portable CD/DVD/BluRay command line recording software.</td><td>2016-03-24</td></tr>
+   <tr class="odd"><td><a href="http://git.2f30.org/colors/log.html">colors</a></td><td><a href="./colors/">git-1</a></td><td>Extract colors from pictures. (git checkout)</td><td>2016-03-24</td></tr>
+   <tr class="even"><td><a href="https://01.org/connman">connman</a></td><td><a href="./connman/">git-1</a></td><td>Wireless LAN network daemon. (git checkout)</td><td>2016-03-24</td></tr>
+   <tr class="odd"><td><a href="https://github.com/eurogiciel-oss/connman-json-client/wiki">connman-ncurses</a></td><td><a href="./connman-ncurses/">git-1</a></td><td>Ncurses interface to connman. (git checkout)</td><td>2016-03-24</td></tr>
+   <tr class="even"><td><a href="https://cgit.freedesktop.org/evtest/">evtest</a></td><td><a href="./evtest/">git-1</a></td><td>Displays information about input devices. (git checkout)</td><td>2016-03-24</td></tr>
    <tr class="odd"><td><a href="https://github.com/libfann/fann">fann</a></td><td><a href="./fann/">git-1</a></td><td>Fast Ariticial Neural Network Library. (git checkout)</td><td>2016-03-24</td></tr>
    <tr class="even"><td><a href="http://tools.suckless.org/farbfeld/">farbfeld</a></td><td><a href="./farbfeld/">git-1</a></td><td>Lossless image format easy to parse, pipe and compress. (git checkout)</td><td>2016-03-24</td></tr>
    <tr class="odd"><td><a href="http://ffmpeg.org">ffmpeg</a></td><td><a href="./ffmpeg/">git-1</a></td><td>Complete solution to record, convert and stream audio and video. (git checkout)</td><td>2016-03-24</td></tr>
@@ -56,6 +58,6 @@
    <tr class="even"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-03-24</td></tr>
    <tr class="odd"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-03-24</td></tr>
   </table>
-  <p><b>55 ports</b></p>
+  <p><b>57 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
