--- a/ports/index.html
+++ b/ports/index.html
@@ -39,31 +39,32 @@
    <tr class="odd"><td><a href="https://github.com/kori/suzaku">sinit</a></td><td><a href="./sinit/">git-1</a></td><td>Sinit using suzadu. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="even"><td><a href="http://sox.sourceforge.net/">sox</a></td><td><a href="./sox/">14.4.2-3</a></td><td>The Swiss Army knife of sound processing programs.</td><td>2016-04-04</td></tr>
    <tr class="odd"><td><a href="http://st.suckless.org/">st</a></td><td><a href="./st/">git-1</a></td><td>Simple terminal.</td><td>2016-04-07</td></tr>
-   <tr class="even"><td><a href="https://github.com/muennich/sxiv">sxiv</a></td><td><a href="./sxiv/">git-1</a></td><td>simple/suckless image-viewer</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="http://bellard.org/tcc/">tcc</a></td><td><a href="./tcc/">0.9.26-1</a></td><td>Tiny C Compiler.</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://www.teamspeak.com/">teamspeak</a></td><td><a href="./teamspeak/">3.0.19-1</a></td><td>TeamSpeak is software for quality voice communication via the Internet.</td><td>2016-04-09</td></tr>
-   <tr class="odd"><td><a href="http://matthew.malensek.net/projects/terminibbles/">terminibbles</a></td><td><a href="./terminibbles/">git-1</a></td><td>A terminal-based nibbles (snake) game. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Curses interface for the daemon of the BitTorrent client Transmission. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-06</td></tr>
-   <tr class="odd"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/muennich/urxvt-perls">urxvt-perls</a></td><td><a href="./urxvt-perls/">git-1</a></td><td>Perl extensions for the urxvt-unicode terminal emulator. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://www.vapoursynth.com/">vapoursynth</a></td><td><a href="./vapoursynth/">git-1</a></td><td>Video processing framework. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/rkitover/vimpager">vimpager</a></td><td><a href="./vimpager/">git-1</a></td><td>Use vim as a pager. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://git.z3bra.org/wendy/log.html">wendy</a></td><td><a href="./wendy/">git-1</a></td><td>Event watcher. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://hoopajoo.net/projects/xautomation.html">xautomation</a></td><td><a href="./xautomation/">1.09-1</a></td><td>Provides tools like xte to fake xorg input.</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-05</td></tr>
-   <tr class="odd"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://store.steampowered.com/">steam</a></td><td><a href="./steam/">1.0.0.52-1</a></td><td>Digital distribution client bootstrap package.</td><td>2016-04-11</td></tr>
+   <tr class="odd"><td><a href="https://github.com/muennich/sxiv">sxiv</a></td><td><a href="./sxiv/">git-1</a></td><td>simple/suckless image-viewer</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://bellard.org/tcc/">tcc</a></td><td><a href="./tcc/">0.9.26-1</a></td><td>Tiny C Compiler.</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://www.teamspeak.com/">teamspeak</a></td><td><a href="./teamspeak/">3.0.19-1</a></td><td>TeamSpeak is software for quality voice communication via the Internet.</td><td>2016-04-09</td></tr>
+   <tr class="even"><td><a href="http://matthew.malensek.net/projects/terminibbles/">terminibbles</a></td><td><a href="./terminibbles/">git-1</a></td><td>A terminal-based nibbles (snake) game. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Curses interface for the daemon of the BitTorrent client Transmission. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-06</td></tr>
+   <tr class="even"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/muennich/urxvt-perls">urxvt-perls</a></td><td><a href="./urxvt-perls/">git-1</a></td><td>Perl extensions for the urxvt-unicode terminal emulator. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://www.vapoursynth.com/">vapoursynth</a></td><td><a href="./vapoursynth/">git-1</a></td><td>Video processing framework. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/rkitover/vimpager">vimpager</a></td><td><a href="./vimpager/">git-1</a></td><td>Use vim as a pager. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://git.z3bra.org/wendy/log.html">wendy</a></td><td><a href="./wendy/">git-1</a></td><td>Event watcher. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://hoopajoo.net/projects/xautomation.html">xautomation</a></td><td><a href="./xautomation/">1.09-1</a></td><td>Provides tools like xte to fake xorg input.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-05</td></tr>
+   <tr class="even"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-04</td></tr>
   </table>
-  <p><b>63 ports</b></p>
+  <p><b>64 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
