--- a/ports/index.html
+++ b/ports/index.html
@@ -27,15 +27,17 @@
    <tr class="odd"><td><a href="https://github.com/mps-youtube/mps-youtube">mps-youtube</a></td><td><a href="./mps-youtube/">git-1</a></td><td>Curses interface for youtube. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="even"><td><a href="http://mpv.io">mpv</a></td><td><a href="./mpv/">git-3</a></td><td>General Purpose video player based on MPlayer and mplayer2. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="odd"><td><a href="https://github.com/wildefyr/mpvc">mpvc</a></td><td><a href="./mpvc/">git-1</a></td><td>An mpc-like interface for mpv. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/neomutt/neomutt">neomutt</a></td><td><a href="./neomutt/">git-1</a></td><td>Bringing together mutt code. (git checkout)</td><td>2016-04-06</td></tr>
-   <tr class="odd"><td><a href="http://nginx.org/">nginx</a></td><td><a href="./nginx/">1.9.14-1</a></td><td>An HTTP and reverse proxy server.</td><td>2016-04-11</td></tr>
-   <tr class="even"><td><a href="http://www.nvidia.com/">nvidia</a></td><td><a href="./nvidia/">364.12-1</a></td><td>nVIDIA Linux Display Driver (long lived branch version)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="http://www.nvidia.com/">nvidia-32</a></td><td><a href="./nvidia-32/">364.12-1</a></td><td>nVIDIA Linux Display Driver (long lived branch version)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://developer.nvidia.com/nvidia-video-codec-sdk">nvidia-sdk</a></td><td><a href="./nvidia-sdk/">6.0.1-1</a></td><td>NVIDIA Video Codec SDK.</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="http://infradead.org/openconnect">openconnect</a></td><td><a href="./openconnect/">7.06-1</a></td><td>An SSL VPN client.</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="https://github.com/snwh/paper-icon-theme">paper-icon-theme</a></td><td><a href="./paper-icon-theme/">git-1</a></td><td>A simple and modern icon theme with material design influences. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="http://www.pip-installer.org/">pip</a></td><td><a href="./pip/">8.1.1-1</a></td><td>A tool for installing and managing Python packages.</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://pypi.python.org/pypi/setuptools">setuptools</a></td><td><a href="./setuptools/">18.4-1</a></td><td>Setuptools for python3.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/Nanoseb/ncTelegram">nctelegram</a></td><td><a href="./nctelegram/">git-1</a></td><td>A curses telegram client written in python. (git checkout)</td><td>2016-04-11</td></tr>
+   <tr class="odd"><td><a href="https://github.com/neomutt/neomutt">neomutt</a></td><td><a href="./neomutt/">git-1</a></td><td>Bringing together mutt code. (git checkout)</td><td>2016-04-06</td></tr>
+   <tr class="even"><td><a href="http://nginx.org/">nginx</a></td><td><a href="./nginx/">1.9.14-1</a></td><td>An HTTP and reverse proxy server.</td><td>2016-04-11</td></tr>
+   <tr class="odd"><td><a href="http://www.nvidia.com/">nvidia</a></td><td><a href="./nvidia/">364.12-1</a></td><td>nVIDIA Linux Display Driver (long lived branch version)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://www.nvidia.com/">nvidia-32</a></td><td><a href="./nvidia-32/">364.12-1</a></td><td>nVIDIA Linux Display Driver (long lived branch version)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://developer.nvidia.com/nvidia-video-codec-sdk">nvidia-sdk</a></td><td><a href="./nvidia-sdk/">6.0.1-1</a></td><td>NVIDIA Video Codec SDK.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://infradead.org/openconnect">openconnect</a></td><td><a href="./openconnect/">7.06-1</a></td><td>An SSL VPN client.</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="https://github.com/snwh/paper-icon-theme">paper-icon-theme</a></td><td><a href="./paper-icon-theme/">git-1</a></td><td>A simple and modern icon theme with material design influences. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://www.pip-installer.org/">pip3</a></td><td><a href="./pip3/">8.1.1-1</a></td><td>A tool for installing and managing Python packages</td><td>2016-04-11</td></tr>
+   <tr class="odd"><td><a href="https://github.com/luckydonald/pytg">pytg</a></td><td><a href="./pytg/">git-1</a></td><td>Python library for communicating with telegram-cli. (git checkout)</td><td>2016-04-11</td></tr>
+   <tr class="even"><td><a href="http://pypi.python.org/pypi/setuptools">setuptools3</a></td><td><a href="./setuptools3/">20.6.7-1</a></td><td>Easily download, build, install, upgrade, and uninstall Python packages.</td><td>2016-04-11</td></tr>
    <tr class="odd"><td><a href="https://github.com/kori/suzaku">sinit</a></td><td><a href="./sinit/">git-1</a></td><td>Sinit using suzadu. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="even"><td><a href="http://sox.sourceforge.net/">sox</a></td><td><a href="./sox/">14.4.2-3</a></td><td>The Swiss Army knife of sound processing programs.</td><td>2016-04-04</td></tr>
    <tr class="odd"><td><a href="http://st.suckless.org/">st</a></td><td><a href="./st/">git-1</a></td><td>Simple terminal.</td><td>2016-04-07</td></tr>
@@ -43,12 +45,14 @@
    <tr class="odd"><td><a href="https://github.com/muennich/sxiv">sxiv</a></td><td><a href="./sxiv/">git-1</a></td><td>simple/suckless image-viewer</td><td>2016-04-04</td></tr>
    <tr class="even"><td><a href="http://bellard.org/tcc/">tcc</a></td><td><a href="./tcc/">0.9.26-1</a></td><td>Tiny C Compiler.</td><td>2016-04-04</td></tr>
    <tr class="odd"><td><a href="http://www.teamspeak.com/">teamspeak</a></td><td><a href="./teamspeak/">3.0.19-1</a></td><td>TeamSpeak is software for quality voice communication via the Internet.</td><td>2016-04-09</td></tr>
-   <tr class="even"><td><a href="http://matthew.malensek.net/projects/terminibbles/">terminibbles</a></td><td><a href="./terminibbles/">git-1</a></td><td>A terminal-based nibbles (snake) game. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Curses interface for the daemon of the BitTorrent client Transmission. (git checkout)</td><td>2016-04-04</td></tr>
-   <tr class="even"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-06</td></tr>
-   <tr class="even"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-04</td></tr>
-   <tr class="odd"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/vysheng/tg">telegram-cli</a></td><td><a href="./telegram-cli/">git-1</a></td><td>Read-line interface for telegram. (git checkout)</td><td>2016-04-11</td></tr>
+   <tr class="odd"><td><a href="http://matthew.malensek.net/projects/terminibbles/">terminibbles</a></td><td><a href="./terminibbles/">git-1</a></td><td>A terminal-based nibbles (snake) game. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Curses interface for the daemon of the BitTorrent client Transmission. (git checkout)</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-06</td></tr>
+   <tr class="odd"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-04</td></tr>
+   <tr class="even"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-04-04</td></tr>
+   <tr class="odd"><td><a href="http://urwid.org/">urwid3</a></td><td><a href="./urwid3/">1.3.1-1</a></td><td>A console user interface library for python.</td><td>2016-04-11</td></tr>
    <tr class="even"><td><a href="https://github.com/muennich/urxvt-perls">urxvt-perls</a></td><td><a href="./urxvt-perls/">git-1</a></td><td>Perl extensions for the urxvt-unicode terminal emulator. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="odd"><td><a href="http://www.vapoursynth.com/">vapoursynth</a></td><td><a href="./vapoursynth/">git-1</a></td><td>Video processing framework. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="even"><td><a href="https://github.com/rkitover/vimpager">vimpager</a></td><td><a href="./vimpager/">git-1</a></td><td>Use vim as a pager. (git checkout)</td><td>2016-04-04</td></tr>
@@ -65,6 +69,6 @@
    <tr class="odd"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-04</td></tr>
    <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-04</td></tr>
   </table>
-  <p><b>64 ports</b></p>
+  <p><b>68 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
