--- a/ports/index.html
+++ b/ports/index.html
@@ -59,14 +59,13 @@
    <tr class="odd"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="odd"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://hoopajoo.net/projects/xautomation.html">xautomation</a></td><td><a href="./xautomation/">1.09-1</a></td><td>Provides tools like xte to fake xorg input.</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
-   <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
+   <tr class="even"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
   </table>
-  <p><b>66 ports</b></p>
+  <p><b>65 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
