--- a/ports/index.html
+++ b/ports/index.html
@@ -23,7 +23,7 @@
    <tr class="odd"><td><a href="http://caca.zou.org/wiki/libcaca">libcaca</a></td><td><a href="./libcaca/">git-1</a></td><td>Color AsCii Art library. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://github.com/neovim/libtermkey">libtermkey</a></td><td><a href="./libtermkey/">git-1</a></td><td>Easy processing of keyboard entry from terminal-based programs. (git checkout)</td><td>2016-04-18</td></tr>
    <tr class="odd"><td><a href="https://github.com/libuv/libuv">libuv</a></td><td><a href="./libuv/">1.8.0-1</a></td><td>Multi-platform support library with a focus on asynchronous I/O. (git checkout)</td><td>2016-04-18</td></tr>
-   <tr class="even"><td><a href="https://github.com/neovim/libvterm">libvterm</a></td><td><a href="./libvterm/">git-1</a></td><td>Abstract library implementation of a VT220/xterm/ECMA-48 terminal emulator - neovim fork</td><td>2016-04-18</td></tr>
+   <tr class="even"><td><a href="https://github.com/neovim/libvterm">libvterm</a></td><td><a href="./libvterm/">git-1</a></td><td>Library implementation of VT220/xterm/ECMA-48 emulators.</td><td>2016-04-19</td></tr>
    <tr class="odd"><td><a href="https://github.com/wmutils/libwm">libwm</a></td><td><a href="./libwm/">git-1</a></td><td>A small library for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://xkbcommon.org/">libxkbcommon</a></td><td><a href="./libxkbcommon/">0.6.1-1</a></td><td>Keymap handling library for toolkits and window systems.</td><td>2016-04-15</td></tr>
    <tr class="odd"><td><a href="https://github.com/groeck/lm-sensors/">lm-sensors</a></td><td><a href="./lm-sensors/">git-1</a></td><td>Clone of lm-sensors svn repository. (git checkout)</td><td>2016-04-13</td></tr>
@@ -70,7 +70,7 @@
    <tr class="even"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="odd"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Linux utility to configure modifier keys to act as other keys when pressed and released on their own. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Modify a key's function on press and hold. (git checkout)</td><td>2016-04-19</td></tr>
    <tr class="even"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
    <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
