--- a/ports/index.html
+++ b/ports/index.html
@@ -11,7 +11,7 @@
    <tr class="odd"><td><a href="https://cgit.freedesktop.org/evtest/">evtest</a></td><td><a href="./evtest/">git-1</a></td><td>Displays information about input devices. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://tools.suckless.org/farbfeld/">farbfeld</a></td><td><a href="./farbfeld/">git-1</a></td><td>Lossless image format easy to parse, pipe and compress. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="odd"><td><a href="http://ffmpeg.org">ffmpeg</a></td><td><a href="./ffmpeg/">git-1</a></td><td>Complete solution to record, convert and stream audio and video. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://chrome.google.com">google-chrome</a></td><td><a href="./google-chrome/">stable_current_amd64-1</a></td><td>Modern binary internet browser.</td><td>2016-04-19</td></tr>
+   <tr class="even"><td><a href="http://chrome.google.com">google-chrome</a></td><td><a href="./google-chrome/">unstable-1</a></td><td>Google chrome binary.</td><td>2016-04-19</td></tr>
    <tr class="odd"><td><a href="https://github.com/thezbyg/gpick">gpick</a></td><td><a href="./gpick/">git-1</a></td><td>Advanced color picker written in C++ using GTK+ toolkit. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://pkgsrc.se/x11/hsetroot">hsetroot</a></td><td><a href="./hsetroot/">1.0.2-1</a></td><td>A tool which allows you to compose wallpapers for X</td><td>2016-04-18</td></tr>
    <tr class="odd"><td><a href="http://tools.suckless.org/ii/">ii</a></td><td><a href="./ii/">git-1</a></td><td>'irc it', simple FIFO based IRC client. (git checkout)</td><td>2016-04-13</td></tr>
@@ -54,7 +54,7 @@
    <tr class="even"><td><a href="http://www.teamspeak.com/">teamspeak</a></td><td><a href="./teamspeak/">3.0.19-1</a></td><td>Teamspeak VoIP client.</td><td>2016-04-18</td></tr>
    <tr class="odd"><td><a href="https://github.com/vysheng/tg">telegram-cli</a></td><td><a href="./telegram-cli/">git-1</a></td><td>Read-line interface for telegram. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://matthew.malensek.net/projects/terminibbles/">terminibbles</a></td><td><a href="./terminibbles/">git-1</a></td><td>A terminal-based nibbles (snake) game. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Curses interface for the daemon of the BitTorrent client Transmission. (git checkout)</td><td>2016-04-19</td></tr>
+   <tr class="odd"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Ncurses interface for transmission. (git checkout)</td><td>2016-04-19</td></tr>
    <tr class="even"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-13</td></tr>
    <tr class="odd"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-13</td></tr>
