--- a/ports/index.html
+++ b/ports/index.html
@@ -11,7 +11,7 @@
    <tr class="odd"><td><a href="https://cgit.freedesktop.org/evtest/">evtest</a></td><td><a href="./evtest/">git-1</a></td><td>Displays information about input devices. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://tools.suckless.org/farbfeld/">farbfeld</a></td><td><a href="./farbfeld/">git-1</a></td><td>Lossless image format easy to parse, pipe and compress. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="odd"><td><a href="http://ffmpeg.org">ffmpeg</a></td><td><a href="./ffmpeg/">git-1</a></td><td>Complete solution to record, convert and stream audio and video. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://chrome.google.com">google-chrome</a></td><td><a href="./google-chrome/">unstable-1</a></td><td>Google chrome binary.</td><td>2016-04-19</td></tr>
+   <tr class="even"><td><a href="http://chrome.google.com">google-chrome</a></td><td><a href="./google-chrome/">unstable-1</a></td><td>Google chrome unstable binary.</td><td>2016-04-19</td></tr>
    <tr class="odd"><td><a href="https://github.com/thezbyg/gpick">gpick</a></td><td><a href="./gpick/">git-1</a></td><td>Advanced color picker written in C++ using GTK+ toolkit. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="http://pkgsrc.se/x11/hsetroot">hsetroot</a></td><td><a href="./hsetroot/">1.0.2-1</a></td><td>A tool which allows you to compose wallpapers for X</td><td>2016-04-18</td></tr>
    <tr class="odd"><td><a href="http://tools.suckless.org/ii/">ii</a></td><td><a href="./ii/">git-1</a></td><td>'irc it', simple FIFO based IRC client. (git checkout)</td><td>2016-04-13</td></tr>
