--- a/ports/index.html
+++ b/ports/index.html
@@ -8,12 +8,14 @@
    <tr class="even"><td><a href="https://github.com/eurogiciel-oss/connman-json-client/wiki">connman-ncurses</a></td><td><a href="./connman-ncurses/">git-1</a></td><td>Ncurses interface to connman. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="odd"><td><a href="https://github.com/toolpunk/dmenu-ee">dmenu-ee</a></td><td><a href="./dmenu-ee/">git-1</a></td><td>Patched dmenu with xywh support. (git checkout)</td><td>2016-04-18</td></tr>
    <tr class="even"><td><a href="http://dtach.sourceforge.net/">dtach</a></td><td><a href="./dtach/">0.8-2</a></td><td>Lightweight session detacher.</td><td>2016-04-18</td></tr>
-   <tr class="odd"><td><a href="https://cgit.freedesktop.org/evtest/">evtest</a></td><td><a href="./evtest/">git-1</a></td><td>Displays information about input devices. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://tools.suckless.org/farbfeld/">farbfeld</a></td><td><a href="./farbfeld/">git-1</a></td><td>Lossless image format easy to parse, pipe and compress. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="http://ffmpeg.org">ffmpeg</a></td><td><a href="./ffmpeg/">git-1</a></td><td>Complete solution to record, convert and stream audio and video. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://chrome.google.com">google-chrome</a></td><td><a href="./google-chrome/">unstable-1</a></td><td>Google chrome unstable binary.</td><td>2016-04-21</td></tr>
-   <tr class="odd"><td><a href="https://github.com/thezbyg/gpick">gpick</a></td><td><a href="./gpick/">git-1</a></td><td>Advanced color picker written in C++ using GTK+ toolkit. (git checkout)</td><td>2016-04-20</td></tr>
-   <tr class="even"><td><a href="http://pkgsrc.se/x11/hsetroot">hsetroot</a></td><td><a href="./hsetroot/">1.0.2-1</a></td><td>A tool which allows you to compose wallpapers for X</td><td>2016-04-18</td></tr>
+   <tr class="odd"><td><a href="http://www.brain-dump.org/projects/dvtm/">dvtm</a></td><td><a href="./dvtm/">git-1</a></td><td>Console window manager. (git checkout)</td><td>2016-04-21</td></tr>
+   <tr class="even"><td><a href="https://cgit.freedesktop.org/evtest/">evtest</a></td><td><a href="./evtest/">git-1</a></td><td>Displays information about input devices. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="http://tools.suckless.org/farbfeld/">farbfeld</a></td><td><a href="./farbfeld/">git-1</a></td><td>Lossless image format easy to parse, pipe and compress. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="http://ffmpeg.org">ffmpeg</a></td><td><a href="./ffmpeg/">git-1</a></td><td>Complete solution to record, convert and stream audio and video. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="http://chrome.google.com">google-chrome</a></td><td><a href="./google-chrome/">unstable-1</a></td><td>Google chrome unstable binary.</td><td>2016-04-21</td></tr>
+   <tr class="even"><td><a href="https://github.com/thezbyg/gpick">gpick</a></td><td><a href="./gpick/">git-1</a></td><td>Advanced color picker written in C++ using GTK+ toolkit. (git checkout)</td><td>2016-04-20</td></tr>
+   <tr class="odd"><td><a href="http://pkgsrc.se/x11/hsetroot">hsetroot</a></td><td><a href="./hsetroot/">1.0.2-1</a></td><td>A tool which allows you to compose wallpapers for X</td><td>2016-04-18</td></tr>
+   <tr class="even"><td><a href="https://www.jetbrains.com/idea/">intellij-idea</a></td><td><a href="./intellij-idea/">145.597-3</a></td><td>The most 'intelligent' Java IDE.</td><td>2016-04-21</td></tr>
    <tr class="odd"><td><a href="https://github.com/dcat/ioup">ioup</a></td><td><a href="./ioup/">git-1</a></td><td>CLI uploader for pub.iotek.org. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://gitlab.com/groups/iucode-tool">iucode-tool</a></td><td><a href="./iucode-tool/">1.5.1-1</a></td><td>Microcode updater for intel i686 and x86_64 for the linux kernel.</td><td>2016-04-19</td></tr>
    <tr class="odd"><td><a href="https://github.com/wmutils/contrib/tree/master/killwa">killwa</a></td><td><a href="./killwa/">git-1</a></td><td>Use atoms to allow smarter window closing. (git checkout)</td><td>2016-04-13</td></tr>
@@ -77,6 +79,6 @@
    <tr class="odd"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
   </table>
-  <p><b>76 ports</b></p>
+  <p><b>78 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
